--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	sommaire articles 
 	<br>
 
+<h1> Site BENARAB ANAIS </h1>
+
 	<a href="article1.html"> article 1 </a>
 	<br>
 	<a href="article2.html"> article 2 </a>
