--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 	<br>
 	<a href="article3.html"> article 3 </a>
 	<br>
+	
 	<a href="article4.html">	article 4 </a>
 	<br>
-
+<a href="formulaire.html">	formulaire </a>
 </body>
 </html>
