--- a/formulaire.html
+++ b/formulaire.html
@@ -44,7 +44,8 @@
 
 <input type="button" name="b1" value="enregistrer">
 <input type="button" name="b1" value="annuler">
-	
+
+<a href="index.html">	retour au sommaire <a/>
 	
 
 </body>
